# ROSAutoExplore

./: README.md  frames_2024-06-20_02.52.03.gv  frames_2024-06-20_10.30.22.gv
install/autonomous_exploration/lib/autonomous_exploration/: listener
install/explore_lite/include/explore/: explore.h
install/explore_lite/share/explore_lite/: local_setup.bash  local_setup.sh  package.sh
install/lidar_cartographer/share/lidar_cartographer/: local_setup.bash
install/map_remapper/lib/map_remapper/: costmap_printer
install/map_remapper/share/map_remapper/: package.bash  package.dsv  package.zsh
install/multirobot_map_merge/include/map_merge/: map_merge.h
install/multirobot_map_merge/share/multirobot_map_merge/: package.xml
install/my_turtlebot3_simulations/share/my_turtlebot3_simulations/: package.dsv  package.zsh
install/remapping/share/remapping/: package.bash  package.xml  package.zsh
install/rf2o_laser_odometry/lib/rf2o_laser_odometry/: rf2o_laser_odometry_node
install/rf2o_laser_odometry/share/rf2o_laser_odometry/: local_setup.bash  local_setup.sh  (+1 more)
local_node/install/my_turtlebot3_simulations/share/my_turtlebot3_simulations/: package.bash  package.ps1  package.sh  package.xml
local_node/install/my_turtlebot3_simulations/share/my_turtlebot3_simulations/worlds/: minimal.world  my_map.world
local_node/src/autonomous_exploration/: package.xml
local_node/src/map_remapper/: setup.cfg
local_node/testing-files/: costmap.txt
log/: latest_build
maps/: map.pgm  map.yaml
src/autonomous_exploration/: setup.py
src/map_remapper/: setup.py
(+96 files in other folders)
