<package format="2">
  <name>my_turtlebot3_simulations</name>
  <version>0.0.0</version>
  <description>Custom simulations for TurtleBot3</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
